--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#Home">Home</a>
+        <a class="nav-link" href="#Home"><i class="fa fa-home"></i> Home</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
