--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,21 +1,22 @@
-<html lang='en'>
+<html lang="en">
 
   <head>
-    <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elevate: Enhanced Company Management Software</title>
-    <link rel='stylesheet' href='/css/style.css' />
-    <script
-      src='https://cdn.jsdelivr.net/npm/handlebars/dist/handlebars.min.js'
-    ></script>
-    <script
-      src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js'
-      integrity='sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz'
-      crossorigin='anonymous'
-    ></script>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
+    {{! <header><img
+        src="/images/Logo.png"
+        alt="Elevate logo"
+        class="navbar-logo"
+      /></header> }}
     {{{body}}}
   </body>
 
