--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -3,12 +3,14 @@
     <div class="project">
         <h2>{{name}}</h2>
         {{#each projects}}
-        <h3>{{name}}</h3>
+        <h4>{{name}}</h4>
         {{#each tasks}}
-        <p>{{title}}</p>
-        <p>{{contents}}</p>
+        <h5>Tasks:</h5>
+        <h6>{{title}}</h6>
+        <p>- {{contents}}</p>
         {{/each}}
         {{/each}}
+        <p>=====================================</p>
     </div>
     {{/each}}
 </div>
