--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -14,14 +14,11 @@
         href="/signup"
         class="btn btn-primary btn-block"
         id="signupHover"
-      >Creating a workspace?</a>
+      >Creating or joining a workspace?</a>
     </div>
     <div class="col">
       <a href="/login" class="btn btn-primary btn-block" id="loginHover">Already
         a member?</a>
-    </div>
-    <div class="col">
-      <a href="/join" class="btn btn-primary btn-block">Joining a team?</a>
     </div>
   </div>
 </div>
