successful sign up and adds user to database along with corresponding workspace id, successful login, both redirect you to homepage (change as needed), provides options to join or create, code is added to database, will need to be able to access code to present to user or use within invitations, currently underway with css for login page

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,9 +1,9 @@
 <div class="container" id="signup">
   <!-- User details -->
-  <div class="row justify-content-center" id="user-info">
+  <div class="row justify-content-center" id="userDetails">
     <div class="col-md-6">
       <h2 class="text-center">Tell us about yourself</h2>
-      <form id="userDetails">
+      <form id="user-info">
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="firstName">First Name</label>
