--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,38 @@
+/* Colour pallete */
+:root {
+    --white: #ffffff;
+ 
+}
+
+/* Global styles */
+* {   color: var(--white);
+    font-family: "Wix Madefor Display", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 /* Background */
-/* body 
-{ 
-    background: linear-gradient(135deg, #6F4EFA, #8259EB, #E14C85,
-    #FF7A64); 
-    background-size: cover; 
-    background-repeat: no-repeat; 
+body 
+ { 
+    background-image: linear-gradient(to right, #f45474, #6a82fb);    
     height: 100vh; 
     margin: 0; 
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-}; */
+};
+
+/* Text */
+h1 {
+    margin-top: 4em;
+}
+h2 {
+    color: var(--white);
+    font-family: "Wix Madefor Display", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+};
+
+#welcome-header {
+    padding-top: 4em;
+}
 
 
 /* Welcome page */
@@ -30,6 +52,21 @@
     content: " Login";
 }
 
+
+
+/* Animation */
+.animate {
+    transition: transform 1s ease-in-out;
+}
+  
+.hidden {
+    transform: translateY(-100%);
+}
+
+.show {
+    transform: translateY(100%);
+}
+  
 .hide {
     display: none;
 }
