--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -1,9 +1,9 @@
 {{! Welcome page }}
-<div class="container">
+<div class="container" id="header-we">
   <div class="row">
     <div class="col text-center">
       <h1>WELCOME TO ELEVATE</h1>
-      <h2>Enhanced company management software.</h2>
+      <h2 id="welcome-sub">Enhanced company management software.</h2>
     </div>
   </div>
 </div>
