--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
 
 /* Global styles */
 * {   color: var(--white);
-    font-family: "Wix Madefor Display", sans-serif;
+    font-family: "Wix Madefor Text", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
@@ -19,40 +19,53 @@ body
     margin: 0; 
 };
 
+
 /* Text */
 h1 {
-    margin-top: 4em;
-}
-h2 {
-    color: var(--white);
+    font-size: 3.5rem;
+    margin-top: 12rem;
+    margin-bottom: 0rem;
     font-family: "Wix Madefor Display", sans-serif;
     font-weight: 400;
     font-style: normal;
+}
+#welcome-sub {
+   font-size: 1.8rem;
+   margin-top: 0.2rem;
+   margin-bottom: 1rem;
+   font-family: "Wix Madefor Display", sans-serif;
+   font-weight: 400;
+   font-style: normal;   
 };
 
-#welcome-header {
-    padding-top: 4em;
-}
+/* Buttons */
 
 
 /* Welcome page */
-/* Navbar */
-.navbar-logo
-{
-    float:left
+#nav-welcome img {
+    position: fixed;
+    top: 60px; /* Adjust as needed */
+    left: 10px; /* Adjust as needed */
+    z-index: 1000; /* Ensure it's above other content */
+  };
+
+#nav-welcome {
+    padding-top: 3.15rem;
 }
+
+
+
+
 
 /* Logins */
 /* Change to JS if we want it fully replaced instead of added to */
 #signupHover:hover::after {
-    content: " Sign up!";
+    content: " Sign Up";
 }
 
 #loginHover:hover::after {
     content: " Login";
 }
-
-
 
 /* Animation */
 .animate {
