--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -1,24 +1,33 @@
 {{! Welcome page }}
-<div class="container" id="header-we">
-  <div class="row">
-    <div class="col text-center">
+
+<!-- NAVBAR-->
+<nav>
+  <div class="container mt-5" id="nav-welcome">
+    <a href="/home">
+      <!-- Logo Image -->
+      <img src="/images/Logo.png" width="200" alt="" class="d-inline-block align-middle mr-2">
+    </a>
+</nav>
+
+<div class="container">
+  <div class="row head">
+    <div class="col text-center mt-5">
       <h1>WELCOME TO ELEVATE</h1>
       <h2 id="welcome-sub">Enhanced company management software.</h2>
     </div>
   </div>
 </div>
-<div class="container">
+<div class="container fixed-width mt-5">
   <div class="row">
     <div class="col">
       <a
         href="/signup"
-        class="btn btn-primary btn-block"
+        class="btn btn-outline-light btn-block"
         id="signupHover"
-      >Creating or joining a workspace?</a>
+      >Create or join a workspace?</a>
     </div>
     <div class="col">
-      <a href="/login" class="btn btn-primary btn-block" id="loginHover">Already
-        a member?</a>
+      <a href="/login" class="btn btn-outline-light btn-block" id="loginHover">Already a member?</a>
     </div>
   </div>
 </div>
