css for login/signup etc

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
 
 /* Global styles */
 * {   color: var(--white);
-    font-family: "Wix Madefor Text", sans-serif;
+    font-family: "Wix Madefor Display", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
@@ -38,24 +38,6 @@ h1 {
    font-style: normal;   
 };
 
-/* Buttons */
-
-
-/* Welcome page */
-#nav-welcome img {
-    position: fixed;
-    top: 60px; /* Adjust as needed */
-    left: 10px; /* Adjust as needed */
-    z-index: 1000; /* Ensure it's above other content */
-  };
-
-#nav-welcome {
-    padding-top: 3.15rem;
-}
-
-
-
-
 
 /* Logins */
 /* Change to JS if we want it fully replaced instead of added to */
@@ -66,6 +48,7 @@ h1 {
 #loginHover:hover::after {
     content: " Login";
 }
+
 
 /* Animation */
 .animate {
