--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,20 @@
 {{! Logging in }}
+
+<!-- NAVBAR-->
+<nav>
+  <div class="container mt-5" id="nav-welcome">
+    <a href="/home">
+      <!-- Logo Image -->
+      <img src="/images/Logo.png" width="200" alt="" class="d-inline-block align-middle mr-2">
+    </a>
+</nav>
+
 <div class="container" id="login">
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <div class="login-container">
+      <div class="login-container mt-5">
         <h2 class="text-center mb-4">Login</h2>
-        <form id="login-form">
+        <form id="login-form mt-5">
           <div class="form-group">
             <label for="email-login">Email</label>
             <input
@@ -23,7 +33,7 @@
               placeholder="Enter Password"
             />
           </div>
-          <button type="submit" class="btn btn-primary btn-block">Login</button>
+          <button type="submit" class="btn btn-outline-light btn-block">Login</button>
         </form>
       </div>
     </div>
