--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,10 +1,19 @@
+<!-- NAVBAR-->
+<nav>
+  <div class="container mt-5" id="nav-welcome">
+    <a href="/home">
+      <!-- Logo Image -->
+      <img src="/images/Logo.png" width="200" alt="" class="d-inline-block align-middle mr-2">
+    </a>
+</nav>
+
 <div class="container" id="signup">
   <!-- User details -->
   <div class="row justify-content-center" id="userDetails">
-    <div class="col-md-6">
+    <div class="col-md-6 mt-5">
       <h2 class="text-center">Tell us about yourself</h2>
       <form id="user-info">
-        <div class="form-row">
+        <div class="form-row mt-5">
           <div class="form-group col-md-6">
             <label for="firstName">First Name</label>
             <input
@@ -12,6 +21,7 @@
               class="form-control"
               id="firstName"
               placeholder="First Name"
+              required
             />
           </div>
           <div class="form-group col-md-6">
@@ -21,12 +31,13 @@
               class="form-control"
               id="lastName"
               placeholder="Last Name"
+              required
             />
           </div>
         </div>
         <button
           type="submit"
-          class="btn btn-primary btn-block"
+          class="btn btn-outline-light btn-block"
           id="userNext"
         >Next</button>
       </form>
@@ -35,7 +46,7 @@
 
   <!-- Email, password and username -->
   <div class="row justify-content-center hide" id="user-loginDetails">
-    <div class="col-md-6">
+    <div class="col-md-6 mt-5">
       <div class="join-container">
         <h2 class="text-center mb-4">Login Information</h2>
         <form id="signup-form">
@@ -46,6 +57,7 @@
               class="form-control"
               id="email-signup"
               placeholder="Enter email"
+              required
             />
           </div>
           <div class="form-group">
@@ -55,6 +67,7 @@
               class="form-control"
               id="username-signup"
               placeholder="Enter username"
+              required
             />
           </div>
           <div class="form-group">
@@ -64,6 +77,7 @@
               class="form-control"
               id="password-signup"
               placeholder="Must be at least 8 characters"
+              required
             />
           </div>
           <div class="form-group">
@@ -73,50 +87,56 @@
               class="form-control"
               id="password-confirm"
               placeholder="Re-enter Password"
+              required
             />
           </div>
-          <button type="submit" class="btn btn-primary btn-block">Next</button>
+          <button type="submit" class="btn btn-outline-light btn-block">Next</button>
         </form>
       </div>
     </div>
   </div>
 
   <!-- New workspace -->
-  <div class="row hide" id="newWorkspace">
-    <div class="col text-center">
-      <h2>What are we doing today?</h2>
-    </div>
-    <div class="row">
-      <div class="col">
-        <button
-          type="submit"
-          class="btn btn-primary btn-block"
-          id="createOpt"
-        >Create a Workspace</button>
-      </div>
-      <div class="col">
-        <button
-          type="submit"
-          class="btn btn-primary btn-block"
-          id="joinOpt"
-        >Join a Workspace</button>
+  <div class="container hide" id="newWorkspace">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="text-center mt-5 mb-4">
+          <h2>What are we doing today?</h2>
+        </div>
+        <div class="row mt-4">
+          <div class="col">
+            <button
+              type="submit"
+              class="btn btn-outline-light btn-block"
+              id="createOpt"
+            >Create a Workspace</button>
+          </div>
+          <div class="col">
+            <button
+              type="submit"
+              class="btn btn-outline-light btn-block"
+              id="joinOpt"
+            >Join a Workspace</button>
+          </div>
+         </div>
       </div>
     </div>
   </div>
 
   <!-- Create a workspace -->
   <div class="row justify-content-center hide" id="workplace-create">
-    <div class="col-md-6">
-      <h2 class="text-center">Welcome to Elevate!</h2>
-      <h3 class="text-center">What would you like to name your workspace?</h3>
+    <div class="col-md-6 mt-5">
+      <h1 class="text-center mb-4">Welcome to Elevate!</h1>
+      <h3 class="text-center mb-4">What would you like to name your workspace?</h3>
       <form id="workspaceForm">
-        <div class="form-row">
+        <div class="form-row justify-content-center">
           <div class="form-group col-md-6">
             <input
               type="text"
               class="form-control"
               id="workspaceName"
               placeholder="Enter name"
+              required
             />
           </div>
         </div>
@@ -124,7 +144,7 @@
           <div class="col-md-6">
             <button
               type="submit"
-              class="btn btn-primary btn-block"
+              class="btn btn-outline-light btn-block"
               id="generate-code"
             >Generate Code</button>
           </div>
@@ -135,18 +155,19 @@
 
   <!-- Join a workspace -->
   <div class="row justify-content-center hide" id="workplace-join">
-    <div class="col-md-6">
-      <h2 class="text-center">Welcome to Elevate!</h2>
-      <h3 class="text-center">Please enter the join code for your workspace
+    <div class="col-md-6 mt-5">
+      <h2 class="text-center mb-4">Welcome to Elevate!</h2>
+      <h3 class="text-center mb-4">Please enter the join code for your workspace
         below</h3>
       <form id="joinForm">
-        <div class="form-row">
+        <div class="form-row justify-content-center">
           <div class="form-group col-md-6">
             <input
               type="text"
               class="form-control"
               id="join-code"
               placeholder="Enter your code"
+              required
             />
           </div>
         </div>
@@ -154,7 +175,7 @@
           <div class="col-md-6">
             <button
               type="submit"
-              class="btn btn-primary btn-block"
+              class="btn btn-outline-light btn-block"
               id="join-btn"
             >Join workspace!</button>
           </div>
@@ -163,14 +184,29 @@
     </div>
   </div>
 
-  <!-- Result Notification -->
-  <div
-    id="resultNotification"
-    class="notification hide animate__animated animate__fadeIn"
-  >
-    <i class="fas fa-check" style="color: #ffffff;"></i>
-    Successfully signed up!
+  <!-- Result Notification for successful sign up -->
+  <div class="container">
+  <div class="row justify-content-center">
+    <div
+      id="resultNotification"
+      class="notification hide animate__animated animate__fadeIn text-center"
+    >
+      <i class="fas fa-check" style="color: #ffffff;"></i>
+      Successfully signed up!
+    </div>
   </div>
+</div>
+
+{{!-- Result notif: incorrect email or password - signup and login --}}
+{{!-- Result notif: passwords must match - signup --}}
+{{!-- Result notif: invalid workspace code - join workspace --}}
+{{!-- Result notif: fields cannot be left empty --}}
+{{!-- Result notif: username not available - signup --}}
+{{!-- Result notif: code generated... pull from db --}}
+
+{{!-- Continues on even if theirs a fault ie non-unique email, unmatched passwords etc --}}
+{{!-- workspace id of creator user is not saving to database --}}
+
 </div>
 
 <script src="/js/signup.js"></script>
