--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -15,12 +15,19 @@
 
 {{! Main }}
 <main class="col-md-9">
-  <section id="task-board" class="" row>
+  <section id="task-board" class="row">
     {{! To Do}}
     <div class="task-column col-md-4" id="to-do">
       <h2 class="h4 my-3">To Do</h2>
       <div class="task-list list-group" id="to-do-task">
         {{! Will load in tasks here}}
+        {{#each tasks.toDo as |task|}}
+        <div class="task-card list-group-item" data-id="{{task.id}}">
+          <h3>{{task.title}}</h3>
+          <p>{{task.contents}}</p>
+          <p>{{task.deadline}}</p>
+        </div>
+        {{/each}}
       </div>
       <button class="create-task">CREATE NEW TASK</button>
     </div>
@@ -30,6 +37,13 @@
       <h2 class="h4 my-3">In Progress</h2>
       <div class="task-list list-group" id="in-progress-task">
         {{! Load in - in progess tasks}}
+        {{#each tasks.inProgress as |task|}}
+        <div class="task-card list-group-item" data-id="{{task.id}}">
+          <h3>{{task.title}}</h3>
+          <p>{{task.contents}}</p>
+          <p>{{task.deadline}}</p>
+        </div>
+        {{/each}}
       </div>
     </div>
     {{! Completed}}
@@ -37,9 +51,17 @@
       <h2 class="h4 my-3">Completed</h2>
       <div class="task-list list-group" id="completed-task">
         {{! Add in completed tasks here}}
+        {{#each tasks.completed as |task|}}
+        <div class="task-card list-group-item" data-id="{{task.id}}">
+          <h3>{{task.title}}</h3>
+          <p>{{task.contents}}</p>
+          <p>{{task.deadline}}</p>
+        </div>
+        {{/each}}
       </div>
     </div>
   </section>
 </main>
 {{! Will either NPM install sortable or have to use a library }}
+<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
 <script src="/js/sortable.js"></script>
