finished 404 and added to login handlebars

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,7 @@
 <!-- NAVBAR-->
 <nav>
   <div class="container mt-5" id="nav-welcome">
-    <a href="/home">
+    <a href="#">
       <!-- Logo Image -->
       <img src="/images/Logo.png" width="200" alt="" class="d-inline-block align-middle mr-2">
     </a>
