--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,7 +14,7 @@
     <div class="col-md-6">
       <div class="login-container mt-5">
         <h2 class="text-center mb-4">Login</h2>
-        <form id="login-form mt-5">
+        <form id="login-form" class="mt-5">
           <div class="form-group">
             <label for="email-login">Email</label>
             <input
