navbar and sidebar update
navbar and sidebar update

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,3 +66,9 @@ h1 {
 .hide {
     display: none;
 }
+
+/* Sidebar link hover styling */
+aside .nav-pills .nav-link:hover {
+    background-color: purple; /* Change to desired hover background color */
+  }
+  
