--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,18 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-  <ul class="navbar -nav">
-    <li class="nav-item">
-      <a href="#Home" class="nav-link">
-      <img src="/images/Logo.png" width="200" alt="Logo" class="d-inline-block align-middle mr-2">
-    </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#Home"><i class="fa fa-home"></i></a>
-    </li>
-    <li class="nav-item">
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </li>
-  </ul>
+  <a class="navbar-brand" href="#Home"><img src="/images/Logo.png" width="150" alt="Logo"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#Home"><i class="fa fa-home fa-2x"></i><span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+    <form class="d-flex" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+  </div>
 </nav>
