--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -1,10 +1,23 @@
-<aside class="sidebar">
-  <ul class="nav flex-column">
-    <li class="nav-item">
-      <a class="nav-link" href="/groups">Groups</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/projects">Projects</a>
-    </li>
-  </ul>
-</aside>
+<aside class="d-flex flex-column flex-shrink-0 p-3 text-white" style="width: 280px">
+    <ul class="nav nav-pills flex-column mb-auto">
+      <li class="nav-item">
+        <a href="#Home" class="nav-link text-white" aria-current="page">
+          <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
+          Home
+        </a>
+      </li>
+      <li>
+        <a href="#Groups" class="nav-link text-white">
+          <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
+          Groups
+        </a>
+      </li>
+      <li>
+        <a href="#Projects" class="nav-link text-white">
+          <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
+          Projects
+        </a>
+      </li>
+    </ul>
+    <hr>
+  </aside>
