--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
 }
 
 /* Global styles */
-* {   color: var(--white);
+* {   color: #000000;
     font-family: "Wix Madefor Display", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -38,6 +38,7 @@ h1 {
    font-style: normal;   
 };
 
+/* Buttons */
 
 /* Logins */
 /* Change to JS if we want it fully replaced instead of added to */
@@ -68,7 +69,38 @@ h1 {
 }
 
 /* Sidebar link hover styling */
-aside .nav-pills .nav-link:hover {
-    background-color: purple; /* Change to desired hover background color */
-  }
+/* aside .nav-pills .nav-link:hover {
+    background-color: purple;
+  } */
+
+/* Custom styles for the sidebar */
+.sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 300px;
+    background-color: #343a40; 
+    padding-top: 20px; 
+    color: white
+}
+
+/* Style links inside the sidebar */
+.sidebar a {
+    padding: 10px;
+    text-decoration: none;
+    color: #fff;
+    display: block;
+}
+
+/* Change color on hover */
+.sidebar a:hover {
+    background-color: #495057;
+}
+
+/* Main content */
+.content {
+    margin-left: 300px;
+    padding: 20px;
+}
   
