--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,15 +1,15 @@
 <nav class="navbar bg-body-tertiary bg-transparent mb-3">
-
   <div class="container-fluid">
 
     <div
       class="collapse navbar-collapse d-flex flex-row-reverse"
       id="navbarNavDropdown"
     >
-      <a
+      <button
         class="nav-link text-white btn btn-outline-light mx-4"
-        href="#"
-      >Logout</a>
+        id="logout"
+        type="submit"
+      >Logout</button>
       <ul class="navbar-nav">
 
         <li class="nav-item dropdown">
@@ -24,6 +24,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Add Project</a></li>
+            <li><hr class="dropdown-divider" /></li>
             <li><a class="dropdown-item" href="#">Invite New Member</a></li>
           </ul>
         </li>
