--- a/views/partials/task.handlebars
+++ b/views/partials/task.handlebars
@@ -1,28 +1,3 @@
-{{! <div class="card">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-    <p class="card-text">Some quick example text to build on the card title and
-      make up the bulk of the card's content.</p>
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
-    <div class="card-footer">
-      Card footer
-    </div>
-  </div>
-</div>
-<div class="card">
-  <div class="card-header">
-    Featured
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to
-      additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div> }}
-
 <!-- Nested Child Card -->
 <div class="card mb-2">
   <div class="card-body">
@@ -38,9 +13,7 @@
   </div>
 </div>
 
-{{!-- 
-
-<main class="col-md-9">
+{{!-- <main class="col-md-9">
   <section id="task-board" class="row">
     {{! To Do}}
     <div class="task-column col-md-4" id="to-do">
