--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -1,3 +1,21 @@
+<head>
+  <script
+    src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+    integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+    integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+    crossorigin="anonymous"
+  ></script>
+  <script src="/js/sidebar.js"></script>
+</head>
 <aside
   class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark"
   style="width: 280px"
@@ -5,7 +23,7 @@
 
   <a class="navbar-brand" href="#Home"><img
       src="/images/Logo.png"
-      width="150"
+      width="200"
       alt="Logo"
     /></a>
 
@@ -49,3 +67,4 @@
   </div>
 
 </aside>
+}}
