--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
 
 /* Global styles */
 * {   color: #000000;
-    font-family: "Wix Madefor Text", sans-serif;
+    font-family: "Wix Madefor Display", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
@@ -43,6 +43,18 @@ h1 {
    font-weight: 400;
    font-style: normal;   
 };
+h5 {
+   font-family: "Montserrat", sans-serif;
+   font-optical-sizing: auto;
+   font-weight: 400;
+   font-style: normal;
+}
+p {
+   font-family: "Montserrat", sans-serif;
+   font-optical-sizing: auto;
+   font-weight: 300;
+   font-style: normal;
+}
 
 /* Buttons */
 
@@ -108,5 +120,4 @@ h1 {
 .content {
     margin-left: 300px;
     padding: 20px;
-}
-  
+};
